MGNLUI-3553 fix light dialog position on safari

--- a/magnolia-ui-vaadin-common-widgets/src/main/resources/VAADIN/themes/admincentraltheme/overlay.scss
+++ b/magnolia-ui-vaadin-common-widgets/src/main/resources/VAADIN/themes/admincentraltheme/overlay.scss
@@ -28,7 +28,6 @@
     overflow:visible;
 }
 
-.overlay.modality-light .modal-curtain,
 .overlay.modality-strong .modal-curtain
 {
     position:absolute;
@@ -46,7 +45,7 @@
 }
 
 .overlay.modality-light .modal-curtain{
-    background-color:transparent;
+    display: none;
 }
 
 .v-panel-content-overlay-child {
